--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   </head>
   <body>
     <div>
-      <h3 id="streak">
-        Streak: 0
-      </h3>
+      <h1>Basem</h1>
       <h4 id="result">
       </h4>
     </div>
